# noise

./: CMakeLists.txt
cmake/: MacroSetOption.cmake
noise/: CMakeLists.txt  config.hh.in  noise.cc  noise.hh  version.hh.in
pkg-config/: CMakeLists.txt
tests/: CMakeLists.txt  test-01.cc
